# aimgui

./: .gitignore  .gitmodules  CMakeLists (3rd copy).txt  CMakeLists (4th copy).txt  CMakeLists (another copy).txt  CMakeLists (copy).txt  CMakeLists.txt  LICENSE  README.md  altsetup.py  generate.py  generate.toml  imgui_root.hpp  pyproject.toml  setup.py  shaders_cache.bak
aimbp/: CMakeLists.txt  aimgen.toml  pyproject.toml  setup.py
aimbp/__aimgen__/: __init__.py
aimbp/aimbp/: __init__.py
aimbp/include/aimbp/: conversions.h
aimbp/src/aimbp/bindings/: generated.cpp  init.cpp  main.cpp
aimbp/tests/: test_aimbp.py
aimbpdemo/: pyproject.toml
aimbpdemo/examples/: basic.py
aimbpdemo/tests/: test_aimbpdemo.py
aimflodemo/: pyproject.toml
aimflodemo/aimflodemo/: page.py
aimflodemo/aimflodemo/nodes/: scope.py  spark.py  volume.py
aimflodemo/aimflodemo/pages/basic/: __init__.py  led.py  volume.py
aimflodemo/aimflodemo/pages/connect/: __init__.py  volume.py
aimflodemo/aimflodemo/pages/sparks/: __init__.py
aimflodemo/tests/: test_aimnodesdemo.py
aimgen/: pyproject.toml
aimgen/aimgen/: __main__.py  class_parser.py  factories.py  generator - Copy (2).py  generator - Copy.py  generator.py  main.py  parse.py  parser.py  root_parser.py  struct_parser.py  transpiler.py  transpiler_base.py
aimgen/aimgen/command/: __init__.py
aimgen/tests/: test_aimgen.py
aimgfx/: CMakeLists.txt  aimgen.toml  pyproject.toml  setup.py
aimgfx/__aimgen__/: __init__.py  bgfx.cpp  bgfx.toml  embedded_shader.toml  platform.toml
aimgfx/aimgfx/: __init__.py
aimgfx/aimgfx/utils/: __init__.py
aimgfx/include/aimgfx/: aimgfx.h
aimgfx/src/aimgfx/bindings/: bgfx.cpp  generated.cpp  init.cpp  main.cpp  platform.cpp
aimgfx/src/aimnodes/bindings/: init.cpp
aimgfxdemo/: pyproject.toml
aimgfxdemo/aimgfxdemo/: __main__.py
aimgfxdemo/aimgfxdemo/nodes/: sine.py
aimgfxdemo/aimgfxdemo/old/: page.py
aimgfxdemo/aimgfxdemo/pages/sine/: scope.py
aimgfxdemo/aimgfxdemo/pages/sparks/: __init__.py
aimgfxdemo/examples/: basic.py  example_window.py
aimgfxdemo/examples/bunny/: main.py
aimgfxdemo/examples/cubes/: main.py
aimgfxdemo/examples/helloworld/: example_window.py  helloworld.py  main.py  window.py
aimgfxdemo/examples/imgui/: main.py  python_image.py
aimgfxdemo/examples/mesh/: main.py
aimgfxdemo/examples/textures/: main.py
aimgui/: CMakeLists.txt  CMakeLists1.txt  MANIFEST.in  __init__.py  aimgen.toml  extra.py  pyproject.toml  setup (copy).py
aimgui/__aimgen__/: __init__ - Copy.py  __init__.py  imgui.toml
aimgui/aimgui/: __init__.py
aimgui/aimgui/impl/aimgfx/: __init__.py
aimgui/aimgui/renderer/: __init__.py  base.py  bgfx_base.py
aimgui/aimgui/renderers/: arcade.py  glumpy.py
aimgui/cmake_config/: AimGuiConfig.cmake
aimgui/include/aimgui/: aimconfig.h  aimgui.h  bindtools.h
aimgui/renderers/: __init__.py  arcade.py
aimgui/src/aimgui/: conversions.h  imconfig.h
aimgui/tests/: test_aimgui.py  test_render.py
aimmgldemo/: pyproject.toml
aimmgldemo/examples/: basic.py
aimnodes/: CMakeLists.txt  aimgen - Copy.toml  aimgen.toml  pyproject.toml  setup.py
aimnodes/__aimgen__/: __init__.py  imnodes.cpp
aimnodes/aimnodes/: __init__.py
aimnodes/tests/: test_aimnodes.py
aimplot/: CMakeLists.txt  CMakeLists1.txt  CMakeLists2.txt  aimgen - Copy.toml  aimgen.toml  pyproject.toml  setup.py
aimplot/__aimgen__/: __init__.py  implot.cpp  implot.toml
aimplot/aimplot/: __init__.py
aimplot/include/aimplot/: aimconfig.h
aimplot/src/aimplot/: aimgui.h
aimplot/tests/: test_aimplot.py
aimpyodemo/: pyproject.toml
aimpyodemo/aimpyodemo/: __init__.py  __main__.py
aimpyodemo/aimpyodemo/gui/: __init__.py  widgets.py
aimpyodemo/aimpyodemo/pages/: __init__.py  basic.py  help.py  index.py
aimpyodemo/examples/01-intro/: 02-sine-tone.py
aimpyodemo/examples/03-generators/: 01-complex-oscs.py  03-fm-generators.py
aimpyodemo/tests/: test_aimpyodemo.py
imdemo/: pyproject.toml
imdemo/examples/: bullet.py  button.py  image.py
imdemo/imdemo/: __init__.py  __main__.py  page.py
imdemo/imdemo/pages/: bullet.py  button.py  checkbox.py  child.py  circle.py  cloud.py  collapsingheader.py  coloredit.py  colors.py  columns.py  combo.py  demo.py  dnd.py  dragfloat.py  dragint.py  dummy.py  fireworks.py  font.py  fontimage.py  group.py  image.py  imagebutton.py  imagedraw.py  indent.py  index.py  input.py  line.py  listbox.py  overlay.py  plot.py  popup.py  rect.py  sameline.py  selectable.py  separator.py  slider.py  spacing.py  sparks.py  sprite.py  text.py  (+5 more)
pkg/aimapp/: CMakeLists.txt  pyproject.toml
pkg/aimapp/aimapp_setup/: develop.py
pkg/aimapp/tests/: test_aimapp.py
pkg/aimappdemo/: pyproject.toml
pkg/aimappdemo/aimappdemo/: __init__.py
pkg/aimappdemo/tests/: test_aimgfxdemo.py
pkg/aimdemo/: pyproject.toml
pkg/aimdemo/aimdemo/: __init__.py  __main__.py
pkg/aimdemo/examples/: framebuffer.py  multiwindow.py
pkg/aimflo/: pyproject.toml
pkg/aimflo/aimflo/: graph.py  node.py
pkg/aimflodemo/: pyproject.toml
pkg/aimflodemo/aimflodemo/: __init__.py  __main__.py
pkg/aimgen/: pyproject.toml
pkg/aimgen/aimgen/: __init__.py  actions.py  generator.py  main.py  runner.py  transpiler.py  transpiler_base.py
pkg/aimgfx/: CMakeLists.txt  pyproject.toml
pkg/aimgfx/__aimgen__/: bgfx.cpp  bgfx.toml  embedded_shader.cpp  embedded_shader.toml  platform.cpp  platform.toml
pkg/aimgfx/aimgfx/: __init__.py
pkg/aimgfx/cmake_config/: AimGfxConfig.cmake
pkg/aimgfxdemo/: pyproject.toml
pkg/aimgfxdemo/aimgfxdemo/: __main__.py
pkg/aimgui/: CMakeLists.txt  pyproject.toml  setup.py
pkg/aimgui/__aimgen__/: imgui.cpp  imgui.toml
pkg/aimgui/aimgui/: __init__.py  extra.py
pkg/aimgui/aimgui_setup/: build.py  install.py
pkg/aimgui/tests/: test_render.py
pkg/aimnodes/: CMakeLists.txt  pyproject.toml
pkg/aimnodes/__aimgen__/: imnodes.cpp  imnodes.toml
pkg/aimnodes/aimnodes/: __init__.py
pkg/aimplot/: CMakeLists.txt  pyproject.toml  testenv.py
pkg/aimplot/__aimgen__/: implot.cpp  implot.toml
pkg/aimplot/aimplot/: __init__.py
(+395 files in other folders)
