[tool.poetry]
name = "aimgui-root"
version = "0.1.0"
description = ""
authors = ["Kurtis Fields <kurtisfields@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.12"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
aimgen = {path = "./pkg/aimgen",  develop = true}
scikit-build = "^0.15.0"

[build-system]
requires = ["poetry-core>=1.0.0", "setuptools", "wheel", "scikit-build", "cmake", "ninja"]
build-backend = "poetry.masonry.api"
