[tool.poetry]
name = "aimgui-root"
version = "0.1.0"
description = ""
authors = ["Kurtis Fields <kurtisfields@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
aimgen = {path = "./pkg/aimgen",  develop = true}
scikit-build = "^0.16.2"
cmake = "^3.24.3"

[build-system]
requires = ["poetry-core>=1.0.0", "setuptools", "wheel", "scikit-build", "cmake", "ninja"]
build-backend = "poetry.masonry.api"
