[tool.poetry]
name = "aimgfx"
version = "0.1.0"
description = ""
authors = ["Kurtis Fields <kurtisfields@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
loguru = "^0.5.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
aimgen = {path = "../aimgen",  develop = true}
scikit-build = "^0.11.1"

[build-system]
requires = ["poetry-core>=1.0.0", "setuptools", "wheel", "scikit-build", "cmake", "ninja"]
build-backend = "poetry.core.masonry.api"
