[tool.poetry]
name = "aimgui"
version = "0.1.0"
description = ""
authors = ["Kurtis Fields <kurtisfields@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
aimgen = {path = "../aimgen",  develop = true}
scikit-build = "^0.11.1"

[build-system]
requires = ["poetry>=0.12", "setuptools", "wheel", "scikit-build", "cmake", "ninja"]
build-backend = "poetry.masonry.api"
