[tool.poetry]
name = "aimmgldemo"
version = "0.1.0"
description = ""
authors = ["Kurtis Fields <kurtisfields@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
aimgui = {path = "../aimgui",  develop = true}
moderngl = "^5.6.2"
moderngl-window = "^2.2.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
