[tool.poetry]
name = "aimpyodemo"
version = "0.1.0"
description = ""
authors = ["Kurtis Fields <kurtisfields@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pyo = {path = "../pyo",  develop = true}
arcade = "^2.4.3"
aimgui = {path = "../aimgui",  develop = true}
aimplot = {path = "../aimplot",  develop = true}

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
