[tool.poetry]
name = "aimdemo"
version = "0.1.0"
description = ""
authors = ["Kurtis Fields <kurtisfields@gmail.com>"]

[tool.poetry.scripts]
vscode = "scripts:vscode"

[tool.poetry.dependencies]
python = "^3.9"
aimgui = {path = "../aimgui",  develop = true}
arcade = "^2.5.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

