[tool.poetry]
name = "aimflo"
version = "0.1.0"
description = ""
authors = ["Kurtis Fields <kurtisfields@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
aimgui = {path = "../aimgui",  develop = true}
aimnodes = {path = "../aimnodes",  develop = true}
arcade = "^2.6.16"
rx = "^3.2.0"
scipy = "^1.7.1"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
