[tool.poetry]
name = "aimflodemo"
version = "0.1.0"
description = ""
authors = ["Kurtis Fields <kurtisfields@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
arcade = "^2.6.13"
aimgui = {path = "../aimgui",  develop = true}
aimnodes = {path = "../aimnodes",  develop = true}
aimflo = {path = "../aimflo",  develop = true}

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
